--- a/src/pages/global.css
+++ b/src/pages/global.css
@@ -6,7 +6,7 @@
 .specialty {
   color: #21ccbb;
   filter: drop-shadow(1px 3px #ffe5b4);
-  line-height: 2em;
+  height: 2em;
 }
 
 .social {
@@ -18,4 +18,8 @@
 
 .social:hover {
   color: #fff;
+}
+
+.text-center {
+  text-align: center;
 }
